--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fair-semaphore",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A semaphore that unlocks waiters in a fair manner, by key, to allow balancing between different consumers",
   "main": "src/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mdlavin/fair-semaphore.js.git"
+    "url": "git+https://github.com/mdlavin/fair-semaphore.git"
   },
   "keywords": [
     "semaphore",
@@ -17,9 +17,9 @@
   "author": "Matt Lavin <matt.lavin@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mdlavin/fair-semaphore.js/issues"
+    "url": "https://github.com/mdlavin/fair-semaphore/issues"
   },
-  "homepage": "https://github.com/mdlavin/fair-semaphore.js#readme",
+  "homepage": "https://github.com/mdlavin/fair-semaphore#readme",
   "dependencies": {
     "drr-fair-queue": "^1.1.0"
   },
